fixed bug on IOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,3 +84,8 @@ margin-top: 15px;
 }
 
 
+#bottomFix{
+    width:100%;
+    height: 400px;
+    
+}
